Fix header visibility

--- a/src/components/Navigation/NavigationMenu.scss
+++ b/src/components/Navigation/NavigationMenu.scss
@@ -11,7 +11,7 @@
 
   &.nav-open {
     opacity: 1;
-    z-index: 5;
+    z-index: 4;
   }
 
   .container {
